--- a/css/responsive.css
+++ b/css/responsive.css
@@ -516,6 +516,7 @@
     }
 
     .cta-btn-links {
+        flex-direction: row;
         justify-content: center;
         align-items: center;
         width: 100%;
