--- a/css/responsive.css
+++ b/css/responsive.css
@@ -109,6 +109,7 @@
 
     .ios {
         padding-bottom: 1.5rem;
+        padding-right:0;
     }
 
     .ios-btn {
@@ -316,6 +317,7 @@
 
     .ios {
         padding-bottom: 1.5rem;
+        padding-right:0;
     }
 
     .ios-btn {
@@ -525,6 +527,7 @@
 
     .ios {
         padding-bottom: 1.5rem;
+        padding-right:0;
     }
 
     .ios-btn {
