--- a/css/responsive.css
+++ b/css/responsive.css
@@ -514,13 +514,11 @@
 
     .cta-text {
         width: 100%;
+        height: 100%;
         display: flex;
+        flex-flow: column wrap;
         justify-content: center;
         align-items: center;
-    }
-    
-    .cta-text p {
-        text-align: center;
     }
     
     .cta-btn-links {
