--- a/css/responsive.css
+++ b/css/responsive.css
@@ -312,7 +312,7 @@
     
     .cta-text p {
         width: 100%;
-        margin: 0 auto;
+        align-self: center;
     }
     
     .cta-btn-links {
@@ -537,7 +537,7 @@
     
     .cta-text p {
         width: 100%;
-        margin: 0 auto;
+        align-self: center;
     }
     
     .cta-btn-links {
