--- a/css/responsive.css
+++ b/css/responsive.css
@@ -560,8 +560,8 @@
         padding: 1rem 0;
     }
 
-    .cta-text p {
-        font-size: 17px;
+    .cta_p {
+        font-size: 16px;
         margin: 0;
         padding: 0;
         text-align: center;
